--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Tic-Tac-Toe with es6 and webpack",
   "main": "app/index.js",
   "scripts": {
-    "start": "webpack && webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack --config webpack-production.config.js --env dev && webpack --config webpack-production.config.js --env build",
+    "serve": "webpack --env dev && webpack --env build",
+    "start": "webpack-dev-server"
   },
   "babel": {
     "presets": [
@@ -33,7 +34,10 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "webpack-dev-server": "^2.9.7"
+    "strip-loader": "^0.1.2",
+    "webpack-dev-server": "^2.9.7",
+    "yargs": "^11.0.0"
   }
 }
